# web-server

./: .gitignore  mise.toml  pyproject.toml  web-server.py
web_server/: __main__.py  goshs_server.py  updog_server.py  webserver.py
web_server/cli/: arguments.py
web_server/config/: config.py  config.toml
web_server/tui/: tui.py  utils.py
web_server/tui/screens/: open_folder.py  show_logs.py
web_server/tui/widgets/: action_buttons.py  double_click_listitem.py  double_click_optionlist.py  file_explorer.py  goshs_form.py  updog_form.py  webserver_form.py
webserver/: __main__.py
webserver/cli/: arguments.py
webserver/config/: config.py
webserver/tui/: tui.py  utils.py
webserver/tui/css/: general.tcss
webserver/tui/screens/: open_folder.py  show_logs.py
webserver/tui/widgets/: bordered_input.py
