[tool.poetry]
name = "web-server"
version = "1.0"
description = "webserver is a TUI that can be used to easily spawn a manager webserver files."
authors = ["lap1nou"]

[tool.poetry.dependencies]
python = "^3.12"
rich  = "^14.3.3"
textual = "^8.0.0"
pyperclip = "^1.9.0"
psutil = "^7.1.3"

[tool.poetry.scripts]
web-server="web_server.__main__:main"

[tool.poetry.group.dev.dependencies]
textual-dev = "1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
