[project]
name = "web-server"
version = "1.0"
description = "webserver is a TUI that can be used to easily spawn a manager webserver files."
authors = [{ name = "lap1nou" }]
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rich>=14.3.3,<15",
    "textual>=8.0.0,<9",
    "pyperclip>=1.9.0,<2",
    "psutil>=7.1.3,<8",
]

[project.scripts]
web-server = "web_server.__main__:main"

[dependency-groups]
dev = ["textual-dev==1.7.0"]

[tool.uv]
default-groups = "all"
exclude-newer = "2 weeks"

[tool.uv.build-backend]
module-name = "web_server"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
